# pdf2summary

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  mineru.txt  pyproject.toml
backend/: .dockerignore  Dockerfile  __init__.py  config.py  models.py
backend/api/: main.py  websocket.py
backend/services/: __init__.py  ai_client.py  document_processor.py  file_storage.py  file_validator.py  mineru_client.py  task_manager.py
backend/tests/: conftest.py  test_ai_client.py  test_ai_client_properties.py  test_api_main.py  test_config.py  test_config_properties.py  test_document_processor.py  test_document_processor_properties.py  test_file_storage.py  test_file_storage_properties.py  test_file_validator.py  test_file_validator_properties.py  test_mineru_client.py  test_mineru_client_properties.py  test_models_properties.py  test_task_manager_properties.py  test_websocket.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: DownloadPanel.css  DownloadPanel.tsx  FileUpload.css  FileUpload.tsx  ProgressPanel.css  ProgressPanel.tsx
