[project]
name = "research-report-processor"
version = "0.1.0"
description = "Research Report Processor - PDF to bilingual translation and summarization system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Research Report Processor Team" }
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Data validation and settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Async HTTP client
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    
    # File upload handling
    "python-multipart>=0.0.6",
    
    # WebSocket support
    "websockets>=12.0",
    
    # Redis client
    "redis>=5.0.0",
    
    # Document processing
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    
    # Property-based testing
    "hypothesis>=6.92.0",
    
    # HTTP mocking
    "aioresponses>=0.7.6",
    "httpx>=0.26.0",
    
    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    
    # Type stubs
    "types-aiofiles>=23.2.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aioresponses.*", "hypothesis.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
